[tool.poetry]
name = "pychunks"
version = "0.1.0"
description = "A Python package for efficient text chunking for building LLM based applications."
authors = ["sunilkumardash9 <sunilkumardash9@gmail.com>"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
